--- a/PocoParts/res/values/strings.xml
+++ b/PocoParts/res/values/strings.xml
@@ -14,8 +14,8 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="advanced_settings">Poco Parts</string>
-    <string name="advanced_settings_summary">Device Specific Customisations</string>
+    <string name="advanced_settings">POCO Extras</string>
+    <string name="advanced_settings_summary">POCO Specific Customization</string>
 
     <string name="display_title">Display</string>
 
